[package]
name = "omni-testing-utilities"
version = "0.1.0"
authors = ["Proximity Labs <hello@proximity.xyz>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
# Near
near-account-id = "2.5.0"
cargo-near-build = "0.9.0"
hex = "0.4.3"
near-jsonrpc-primitives = "0.34.3"
near-primitives = { version = "0.34.3" }
near-crypto = { version = "0.34.3" }
near-jsonrpc-client = "0.20.0"

# Bitcoin
bitcoind = { package = "bitcoind-json-rpc-regtest", version = "0.3.0", features = [
    "26_0",
] }
bitcoin = { version = "0.32.0", default-features = false, features = [
    "std",
    "serde",
    "rand-std",
    "rand",
    "secp-lowmemory",
    "secp-recovery",
] }
tempfile = "3.3.0"
sha3 = "0.10.8"
k256 = { version = "0.13.1", features = [
    "sha256",
    "ecdsa",
    "serde",
    "arithmetic",
    "expose-field",
] }
ripemd = "0.1.3"
# Utilities
serde = "1.0"
serde_json = "1.0"
bs58 = "0.5.1"
